[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/duel/DuelGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/duel/states/StateStart.gd" type="Script" id=2]
[ext_resource path="res://scenes/duel/states/StateRiver.gd" type="Script" id=3]
[ext_resource path="res://scenes/duel/states/StatePickCard.gd" type="Script" id=4]
[ext_resource path="res://scenes/duel/states/StateChooseCard.gd" type="Script" id=5]
[ext_resource path="res://scenes/duel/states/StateExecuteCard.gd" type="Script" id=6]
[ext_resource path="res://scenes/duel/CardBoard.tscn" type="PackedScene" id=7]

[node name="DuelGame" type="Node2D"]
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="Start" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="River" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="PickCard" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="ChooseCard" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="ExecuteCard" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="River" type="Position2D" parent="."]
position = Vector2( 400, 300 )

[node name="CardBoard" parent="." instance=ExtResource( 7 )]

[node name="Tween" type="Tween" parent="."]

